--- a/references.bib
+++ b/references.bib
@@ -378,3 +378,15 @@ url={https://books.google.com/books?id=ZXL6AQAAQBAJ}
   publisher={Taylor \& Francis},
   doi = {10.1198/jcgs.2010.08162}
 }
+
+@article{thal2023causal,
+  title={Causal Methods Madness: Lessons Learned from the 2022 ACIC Competition to Estimate Health Policy Impacts},
+  author={Thal, Dan RC and Finucane, Mariel M},
+  journal={Observational Studies},
+  volume={9},
+  number={3},
+  pages={3--27},
+  year={2023},
+  publisher={University of Pennsylvania Press},
+  doi = {110.1353/obs.2023.0023},
+}
