bart, bcf and longbet

--- a/references.bib
+++ b/references.bib
@@ -390,3 +390,23 @@ url={https://books.google.com/books?id=ZXL6AQAAQBAJ}
   publisher={University of Pennsylvania Press},
   doi = {110.1353/obs.2023.0023},
 }
+
+@article{hahn2020bayesian,
+  title={Bayesian regression tree models for causal inference: Regularization, confounding, and heterogeneous effects (with discussion)},
+  author={Hahn, P Richard and Murray, Jared S and Carvalho, Carlos M},
+  journal={Bayesian Analysis},
+  volume={15},
+  number={3},
+  pages={965--1056},
+  year={2020},
+  publisher={International Society for Bayesian Analysis},
+  doi = {10.1214/19-BA1195}
+}
+
+@article{wang2024longbet,
+  title={LongBet: Heterogeneous Treatment Effect Estimation in Panel Data},
+  author={Wang, Meijia and Martinez, Ignacio and Hahn, P Richard},
+  journal={arXiv preprint arXiv:2406.02530},
+  year={2024},
+  doi = {arXiv:2406.02530}
+}
