--- a/references.bib
+++ b/references.bib
@@ -410,3 +410,28 @@ url={https://books.google.com/books?id=ZXL6AQAAQBAJ}
   year={2024},
   doi = {arXiv:2406.02530}
 }
+
+@Manual{stochastictree,
+  title = {stochtree: Stochastic tree ensembles (XBART and BART) for supervised learning and causal inference},
+  author = {Drew Herren and Richard Hahn and Jared Murray and Carlos Carvalho and Jingyu He},
+  year = {2024},
+  note = {R package version 0.0.0.9000},
+  url = {https://stochastictree.github.io/stochtree-r/},
+}
+
+
+@InProceedings{krantsevich23a,
+  title = 	 {Stochastic Tree Ensembles for Estimating Heterogeneous Effects},
+  author =       {Krantsevich, Nikolay and He, Jingyu and Hahn, P. Richard},
+  booktitle = 	 {Proceedings of The 26th International Conference on Artificial Intelligence and Statistics},
+  pages = 	 {6120--6131},
+  year = 	 {2023},
+  editor = 	 {Ruiz, Francisco and Dy, Jennifer and van de Meent, Jan-Willem},
+  volume = 	 {206},
+  series = 	 {Proceedings of Machine Learning Research},
+  month = 	 {25--27 Apr},
+  publisher =    {PMLR},
+  pdf = 	 {https://proceedings.mlr.press/v206/krantsevich23a/krantsevich23a.pdf},
+  url = 	 {https://proceedings.mlr.press/v206/krantsevich23a.html},
+  abstract = 	 {Determining subgroups that respond especially well (or poorly) to specific interventions (medical or policy) requires new supervised learning methods tailored specifically for causal inference. Bayesian Causal Forest (BCF) is a recent method that has been documented to perform well on data generating processes with strong confounding of the sort that is plausible in many applications. This paper develops a novel algorithm for fitting the BCF model, which is more efficient than the previous Gibbs sampler. The new algorithm can be used to initialize independent chains of the existing Gibbs sampler leading to better posterior exploration and coverage of the associated interval estimates in simulation studies. The new algorithm is compared to related approaches via simulation studies as well as an empirical analysis.}
+}
